--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <v-container fluid>
             <v-row dense>
               <v-col cols="12" xs="12" sm="12" md="6" lg="4">
-                <v-card title="Loss Amount Calculation">
+                <v-card title="Loss amount calculation">
                   <v-card-text>
                     <v-container>
                       <v-row dense>
@@ -43,7 +43,7 @@
                 </v-card>
               </v-col>
               <v-col cols="12" xs="12" sm="12" md="6" lg="4">
-                <v-card title="Stop-loss Calculation">
+                <v-card title="Profit and loss calculation">
                   <v-card-text>
                     <v-container>
                       <v-row dense>
@@ -66,7 +66,7 @@
                       <v-row align="baseline" dense>
                         <v-col cols="12">
                           <div class="text-h6 d-flex">
-                            <div>損益：</div>
+                            <div>Profit and loss：</div>
                             <div class="text-right" style="min-width: 100px;border-bottom: 2px solid rgb(var(--v-theme-primary));">{{ profitLoss }}</div>
                           </div>
                         </v-col>
