--- a/index.html
+++ b/index.html
@@ -86,31 +86,40 @@
                   <v-card-text class="py-0 px-0">
                     <v-container>
                       <v-row dense>
-                        <v-col cols="6">
+                        <v-col cols="4">
                           <v-text-field label="Acquisition price" type="number" v-model="inputAveraging.acquisitionPrice" color="primary" variant="underlined" density="compact" hide-details="auto" clearable></v-text-field>
                           <v-slider density="compact" v-model="inputAveraging.acquisitionPrice" color="primary" hide-details thumb-size="10" :min="0" :max="10000" :step="10"></v-slider>
                         </v-col>
-                        <v-col cols="6">
+                        <v-col cols="4">
                           <v-text-field label="Current shares" type="number" v-model="inputAveraging.currentShares" color="primary" variant="underlined" density="compact" hide-details="auto" clearable></v-text-field>
                           <v-slider density="compact" v-model="inputAveraging.currentShares" color="primary" hide-details thumb-size="10" :min="0" :max="10000" :step="100"></v-slider>
                         </v-col>
+                        <v-col cols="4">
+                          <v-text-field v-model="dispBoughtPrice" label="Price" color="primary" density="compact" variant="solo" readonly></v-text-field>
+                        </v-col>
                       </v-row>
                       <v-row dense>
-                        <v-col cols="6">
+                        <v-col cols="4">
                           <v-text-field label="Current price" type="number" v-model="inputAveraging.currentPrice" color="primary" variant="underlined" density="compact" hide-details="auto" clearable></v-text-field>
                           <v-slider density="compact" v-model="inputAveraging.currentPrice" color="primary" hide-details thumb-size="10" :min="0" :max="10000" :step="10"></v-slider>
                         </v-col>
-                        <v-col cols="6">
+                        <v-col cols="4">
                           <v-text-field label="Trade shares" type="number" v-model="inputAveraging.tradeShares" color="primary" variant="underlined" density="compact" hide-details="auto" clearable></v-text-field>
                           <v-slider density="compact" v-model="inputAveraging.tradeShares" color="primary" hide-details thumb-size="10" :min="0" :max="10000" :step="100"></v-slider>
                         </v-col>
+                        <v-col cols="4">
+                          <v-text-field v-model="dispBuyingPrice" label="Price" color="primary" density="compact" variant="solo" readonly></v-text-field>
+                        </v-col>
                       </v-row>
                       <v-row dense>
-                        <v-col cols="6">
+                        <v-col cols="4">
                           <v-text-field v-model="dispAveragePrice" label="Average price" color="primary" density="compact" variant="solo" readonly></v-text-field>
                         </v-col>
-                        <v-col cols="6">
+                        <v-col cols="4">
                           <v-text-field v-model="dispHoldingShares" label="Holding shares" color="primary" density="compact" variant="solo" readonly></v-text-field>
+                        </v-col>
+                        <v-col cols="4">
+                          <v-text-field v-model="dispEvaluatedPrice" label="Evaluate price" color="primary" density="compact" variant="solo" readonly></v-text-field>
                         </v-col>
                       </v-row>
                       <v-row dense>
@@ -182,13 +191,31 @@
             }
             return price.toLocaleString()
           },
-          averagePrice() {
-            const currentPrice = Number(this.inputAveraging.currentPrice);
+          boughtPrice() {
             const acquisitionPrice = Number(this.inputAveraging.acquisitionPrice);
             const currentShares = Number(this.inputAveraging.currentShares);
+            return acquisitionPrice * currentShares;
+          },
+          dispBoughtPrice() {
+            return this.boughtPrice.toLocaleString();
+          },
+          buyingPrice() {
+            const currentPrice = Number(this.inputAveraging.currentPrice);
             const tradeShares = Number(this.inputAveraging.tradeShares);
+            return currentPrice * tradeShares;
+          },
+          dispBuyingPrice() {
+            return this.buyingPrice.toLocaleString();
+          },
+          evaluatedPrice() {
+            return this.averagePrice * this.holdingShares;
+          },
+          dispEvaluatedPrice() {
+            return this.evaluatedPrice.toLocaleString();
+          },
+          averagePrice() {
             const price = this.holdingShares == 0 ? 0 
-                            : ((acquisitionPrice * currentShares) + (currentPrice * tradeShares)) / this.holdingShares;
+                            : (this.boughtPrice + this.buyingPrice) / this.holdingShares;
             const rounded = Math.round(price);
             return rounded;
           },
@@ -198,7 +225,6 @@
           holdingShares() {
             const currentShares = Number(this.inputAveraging.currentShares)
             const tradeShares = Number(this.inputAveraging.tradeShares)
-            console.log(typeof(currentShares), typeof(tradeShares))
             return currentShares + tradeShares;
           },
           dispHoldingShares() {
@@ -206,7 +232,7 @@
           },
           profit() {
             const profitTaking = Number(this.inputAveraging.profitTaking);
-            const profit = (profitTaking * this.holdingShares) - (this.averagePrice * this.holdingShares);
+            const profit = (profitTaking * this.holdingShares) - this.evaluatedPrice;
             return profit.toLocaleString();
           }
         },
